objects/Class__c/Class__c.object-meta.xml
<CustomObject>
    <description>Information of Classes in School</description>
    <label>Class</label>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>