objects/Class__c/fields/Board__c.field-meta.xml
<CustomField>
    <fullName>Board__c</fullName>
    <label>Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Board</valueSetName>
    </valueSet>
</CustomField>