objects/Class__c/fields/Class_Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Teacher_Name__c</fullName>
    <label>Class Teacher Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>