objects/Class__c/fields/Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_Name__c</fullName>
    <label>Coordinator Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>