objects/Class__c/recordTypes/CBSE.recordType-meta.xml
<RecordType>
    <fullName>CBSE</fullName>
    <active>true</active>
    <label>CBSE</label>
</RecordType>