objects/Class__c/recordTypes/RBSE.recordType-meta.xml
<RecordType>
    <fullName>RBSE</fullName>
    <active>true</active>
    <label>RBSE</label>
</RecordType>