objects/Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Students__c</columns>
    <columns>Class_Teacher_Name__c</columns>
    <columns>School__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>